# compileit-rag

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: agent.py  config.py  main.py  prompts.py  retriever.py  tools.py
backend/ingest/: build_index.py  clean.py  crawl.py
backend/tests/: test_clean.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatWindow.tsx  Message.tsx  SourceList.tsx
