[project]
name = "compileit-rag-backend"
version = "0.1.0"
description = "RAG chat backend for compileit.com"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "lxml>=5.3",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2.50",
    "chromadb>=0.5",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ingest*"]

[tool.ruff]
line-length = 100
target-version = "py311"
